fix: Align checkbox in middle

--- a/src/components/Checkbox/style.css
+++ b/src/components/Checkbox/style.css
@@ -4,7 +4,7 @@
   width: 1rem;
   height: 1rem;
   position: relative;
-  /* vertical-align: middle;  */
+  vertical-align: middle; 
 }
 
 .custom-checkbox:indeterminate::before {
